--- a/.github/workflows/build-listing.yml
+++ b/.github/workflows/build-listing.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Checkout Automation Repository
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
         with:
-          repository: vrchat-community/package-list-action
+          repository: hoshinolabs-vrchat/package-list-action
           path: ${{ env.pathToCi }}
           clean: false
 
@@ -58,7 +58,11 @@ jobs:
       
       # Build Package Version Listing with Nuke
       - name: Build Package Version Listing
-        run: ${{ env.pathToCi }}/build.cmd BuildRepoListing --root ${{ env.pathToCi }} --list-publish-directory $GITHUB_WORKSPACE/${{ env.listPublishDirectory }} --current-package-name ${{ vars.PACKAGE_NAME }}
+        run: ${{ env.pathToCi }}/build.cmd BuildRepoListing --root ${{ env.pathToCi }} --list-publish-directory $GITHUB_WORKSPACE/${{ env.listPublishDirectory }} --current-package-name ${{ vars.PACKAGE_NAME }} --package-listing-publish-filename vpm-prerelease.json --include-prerelease true --only-package-listing-publish true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build Package Version Listing
+        run: ${{ env.pathToCi }}/build.cmd BuildRepoListing --root ${{ env.pathToCi }} --list-publish-directory $GITHUB_WORKSPACE/${{ env.listPublishDirectory }} --current-package-name ${{ vars.PACKAGE_NAME }} --package-listing-publish-filename vpm.json
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
