--- a/.github/workflows/trigger-repo-listing.yml
+++ b/.github/workflows/trigger-repo-listing.yml
@@ -29,8 +29,8 @@ jobs:
           github-token: ${{ steps.app-token.outputs.token }}
           script: |
             await github.rest.actions.createWorkflowDispatch({
-              owner: 'ikuko',
-              repo: 'vpm-test',
+              owner: 'hoshinolabs-vrchat',
+              repo: 'template-package-listing',
               workflow_id: 'build-listing.yml',
               ref: 'main',
             })
