--- a/.github/workflows/trigger-repo-listing.yml
+++ b/.github/workflows/trigger-repo-listing.yml
@@ -29,7 +29,7 @@ jobs:
           github-token: ${{ steps.app-token.outputs.token }}
           script: |
             await github.rest.actions.createWorkflowDispatch({
-              owner: 'hoshinolabs-vrchat',
+              owner: 'hoshinolabs',
               repo: 'template-package-listing',
               workflow_id: 'build-listing.yml',
               ref: 'main',
